feat: implement version 1.0.0 feature and new implementation of packages

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+
+# =================================
+#  AWS CONFIGURE 
+# =================================
+
+export AWS_ACCESS_KEY_ID=
+export AWS_SECRET_ACCESS_KEY=
+export AWS_REGION=us-east-1
+
+
 # =================================
 # Database Configuration
 # =================================
@@ -10,17 +20,19 @@ DATABASE_NAME=appdb
 # =================================
 # Wompi Payment Gateway
 # =================================
-# Para Sandbox (desarrollo):
-WOMPI_PUBLIC_KEY=pub_stagtest_xxx
-WOMPI_PRIVATE_KEY=prv_stagtest_xxx
-WOMPI_INTEGRITY_SECRET=stagtest_integrity_xxx
+# Para Sandbox (desarrollo/UAT):
 WOMPI_API_URL=https://api-sandbox.co.uat.wompi.dev/v1
+WOMPI_PUBLIC_KEY=pub_stagtest_g2u0HQd3ZMh05hsSgTS2lUV8t3s4mOt7
+WOMPI_PRIVATE_KEY=prv_stagtest_5i0ZGIGiFcDQifYsXxvsny7Y37tKqFWg
+WOMPI_INTEGRITY_SECRET=stagtest_integrity_nAIBuqayW70XpUqJS4qf4STYiISd89Fp
+WOMPI_EVENTS_KEY=stagtest_events_2PDUmhMywUkvb1LvxYnayFbmofT7w39N
 
 # Para Producción:
+# WOMPI_API_URL=https://production.wompi.co/v1
 # WOMPI_PUBLIC_KEY=pub_prod_xxx
 # WOMPI_PRIVATE_KEY=prv_prod_xxx
 # WOMPI_INTEGRITY_SECRET=prod_integrity_xxx
-# WOMPI_API_URL=https://production.wompi.co/v1
+# WOMPI_EVENTS_KEY=prod_events_xxx
 
 # =================================
 # Application Configuration
