--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
 
 # =================================
-#  AWS CONFIGURE 
+# PRODUCTION ENVIRONMENT VARIABLES FOR RENDER
 # =================================
 
-export AWS_ACCESS_KEY_ID=
-export AWS_SECRET_ACCESS_KEY=
-export AWS_REGION=us-east-1
+# AWS Configuration  
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+AWS_REGION=us-east-2
+AWS_S3_BUCKET=product-images-wompi
 
-
-# =================================
-# Database Configuration
-# =================================
-DATABASE_HOST=localhost
-DATABASE_PORT=5433
-DATABASE_USERNAME=appuser
-DATABASE_PASSWORD=apppass
-DATABASE_NAME=appdb
+# Database Configuration - Vercel/Neon
+DATABASE_URL=postgresql://user:password@host/database?sslmode=require
+DATABASE_HOST=your_database_host
+DATABASE_PORT=5432
+DATABASE_USERNAME=your_database_user
+DATABASE_PASSWORD=your_database_password
+DATABASE_NAME=your_database_name
 
 # =================================
 # Wompi Payment Gateway
