--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,11 @@ services:
     name: wompi-api
     env: node
     plan: free
-    buildCommand: bun install
+    buildCommand: bun install && bun run build
     startCommand: bun run start:prod
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 10000
+    autoDeploy: true
